force-app/main/default/objects/XactlyExpress__XCPaymentFilter__c/fields/XactlyExpress__DecimalValue__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DecimalValue__c</fullName>
    <label>DecimalValue</label>
    <precision>15</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>