force-app/main/default/objects/XactlyExpress__XCPaymentFilter__c/fields/XactlyExpress__Deleted__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>