force-app/main/default/objects/XactlyExpress__XCPaymentFilter__c/fields/XactlyExpress__Field__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>