force-app/main/default/objects/XactlyExpress__XCPaymentFilter__c/fields/XactlyExpress__Operator__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Operator__c</fullName>
    <label>Operator</label>
    <length>55</length>
    <type>Text</type>
</CustomField>