force-app/main/default/objects/XactlyExpress__XCPaymentFilter__c/fields/XactlyExpress__SelectedYear__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__SelectedYear__c</fullName>
    <label>SelectedYear</label>
    <length>255</length>
    <type>Text</type>
</CustomField>