force-app/main/default/objects/XactlyExpress__XCPaymentFilter__c/fields/XactlyExpress__StrValue__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__StrValue__c</fullName>
    <label>StrValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>