force-app/main/default/objects/XactlyExpress__XCPaymentFilter__c/fields/XactlyExpress__XCPeriod__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__XCPeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>XCPeriod__c</label>
    <referenceTo>XactlyExpress__XCPeriod__c</referenceTo>
    <relationshipLabel>XCPeriod</relationshipLabel>
    <relationshipName>XCPeriod</relationshipName>
    <type>Lookup</type>
</CustomField>